2025/02/26 (hm) Modify: modified DTOs and configs